--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -4,7 +4,7 @@ body {
   outline: none;
   text-decoration: none;
   list-style-type: none;
-  background-color: gray;
+  background-color: beige;
 }
 .box {
   width: 100%;
